# Overpass2

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Activity.cpp.FFB7A9A3FE73776E.idx  Activity.hpp.C43AD54A46418F74.idx  ActivityManager.cpp.290D39012D03D816.idx  ActivityManager.hpp.D0D96A5D2C1EABAC.idx  Application.cpp.6C40FE97067AB520.idx  Application.hpp.3F20EBE43A251AC8.idx  DemoActivity.cpp.5D105DC94DF2869E.idx  DemoActivity.hpp.7EDDECA27DF35EB7.idx  MusicPlayer.cpp.F84124AEF45D690B.idx  MusicPlayer.hpp.AE3397C8B450E74D.idx  RectangleView.cpp.F4DAD73FB076D3EC.idx  RectangleView.hpp.CC1F5974DC70937F.idx  ResourceID.hpp.E29BCB458EF47EE1.idx  ResourceManager.hpp.A1566154BB21F1A8.idx  ResourceManager.inl.CA86D19016F5B2F9.idx  SoundPlayer.cpp.83589B4D12790A7D.idx  SoundPlayer.hpp.0433D3EAA17EDD32.idx  TextView.cpp.0F0685D7A8E33A9E.idx  TextView.hpp.FB796B1D58D02B74.idx  ViewGroup.cpp.D158E4D2472FF09A.idx  ViewGroup.hpp.723A75F58AAF3B4C.idx  Viewable.cpp.8D659B155DC2E1A9.idx  Viewable.hpp.603D86A2AE394799.idx  main.cpp.AE113BD7744C2A7E.idx
.github/workflows/: ci.yml  cmake-multi-platform.yml
data/: login.txt  users.db
include/activities/: DemoActivity.hpp  GameActivity.hpp  HelpActivity.hpp  LevelsActivity.hpp  LoginActivity.hpp  MainMenuActivity.hpp  ProfileActivity.hpp  RankingActivity.hpp  SettingsActivity.hpp  SignupActivity.hpp
include/animation/: TransitionHandler.hpp
include/database/: GameSetting.hpp  UserData.hpp  UserRepo.hpp  UserSession.hpp  UtilitySave.hpp
include/entity/: Animal.hpp  Animation.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  Field.hpp  Game.hpp  Green.hpp  Lane.hpp  Log.hpp  Obstacle.hpp  Player.hpp  PlayerNode.hpp  Railway.hpp  RailwayLight.hpp  River.hpp  Road.hpp  SeqZone.hpp  SeqZoneRiver.hpp  StringHelpers.hpp  TrafficLight.hpp  Train.hpp  Vehicle.hpp  World.hpp  Zone.hpp
include/entity/animals/: Animal.hpp
include/entity/factory/: AnimalFactory.hpp  LogFactory.hpp  TrainFactory.hpp  VehicleFactory.hpp
include/entity/vehicles/: Vehicle.hpp
include/framework/: Activity.hpp  ActivityFactory.hpp  ActivityGenerator.hpp  ActivityManager.hpp  AppConfig.hpp  AppConig.inl  Application.hpp  Command.hpp  CommandQueue.hpp  EventListener.hpp  EventPublisher.hpp  Intent.hpp  LayerView.hpp  MusicPlayer.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceID.hpp  ResourceManager.hpp  ResourceManager.inl  SoundPlayer.hpp  ViewGroup.hpp  Viewable.hpp
include/framework/exceptions/: ActivityFinishReturn.hpp
include/framework/profile/: ActivityHeader.hpp  ActivityID.hpp  ActivityProfile.hpp  ConfigKey.hpp  ResourceID.hpp  ViewCategory.hpp
include/gui/: ButtonView.hpp  EditTextView.hpp  RectangleView.hpp  SpriteButtonView.hpp  SpriteSheetView.hpp  SpriteView.hpp  TextView.hpp  ToggleButtonView.hpp
include/gui/factory/: BackButtonFactory.hpp  BackgroundFactory.hpp  IconButtonFactory.hpp  InputFieldFactory.hpp  MenuButtonFactory.hpp  RankingBarFactory.hpp  SettingToggleFactory.hpp  SquareButtonFactory.hpp  TitlebarFactory.hpp
include/layer/: RainLayer.hpp
include/map_generator/: FieldProperties.hpp  LaneProperties.hpp  MapGenerator.hpp  PavementProperties.hpp  RailProperties.hpp  RailwayProperties.hpp  RiverProperties.hpp  RoadProperties.hpp  StreetProperties.hpp
include/map_renderer/: MapRenderer.hpp
include/utils/: MyRandom.hpp  MyTimer.hpp  Vector2dUtils.hpp
src/: main.cpp
src/activities/: DemoActivity.cpp  GameActivity.cpp  HelpActivity.cpp  LevelsActivity.cpp  LoginActivity.cpp  MainMenuActivity.cpp  ProfileActivity.cpp  RankingActivity.cpp  SettingsActivity.cpp  SignupActivity.cpp
src/animation/: TransitionHandler.cpp
src/database/: GameSetting.cpp  UserData.cpp  UserRepo.cpp  UserSession.cpp  UtilitySave.cpp
src/entity/: Animal.cpp  Animation.cpp  Command.cpp  Entity.cpp  Field.cpp  Game.cpp  Green.cpp  Lane.cpp  Log.cpp  Obstacle.cpp  Player.cpp  PlayerNode.cpp  Railway.cpp  RailwayLight.cpp  River.cpp  Road.cpp  SeqZone.cpp  SeqZoneRiver.cpp  TrafficLight.cpp  Train.cpp  Vehicle.cpp  World.cpp  Zone.cpp
src/entity/animals/: Animal.cpp
src/entity/factory/: AnimalFactory.cpp  LogFactory.cpp  TrainFactory.cpp  VehicleFactory.cpp
src/framework/: Activity.cpp  ActivityFactory.cpp  ActivityGenerator.cpp  ActivityManager.cpp  Application.cpp  Command.cpp  CommandQueue.cpp  EventListener.cpp  EventPublisher.cpp  LayerView.cpp  MusicPlayer.cpp  SoundPlayer.cpp  ViewGroup.cpp  Viewable.cpp
src/framework/exceptions/: ActivityFinishReturn.cpp
src/gui/: ButtonView.cpp  EditTextView.cpp  RectangleView.cpp  SpriteButtonView.cpp  SpriteSheetView.cpp  SpriteView.cpp  TextView.cpp  ToggleButtonView.cpp
src/gui/factory/: BackButtonFactory.cpp  BackgroundFactory.cpp  IconButtonFactory.cpp  InputFieldFactory.cpp  MenuButtonFactory.cpp  RankingBarFactory.cpp  SettingToggleFactory.cpp  SquareButtonFactory.cpp  TitlebarFactory.cpp
src/layer/: RainLayer.cpp
src/map_generator/: FieldProperties.cpp  LaneProperties.cpp  MapGenerator.cpp  PavementProperties.cpp  RailProperties.cpp  RailwayProperties.cpp  RiverProperties.cpp  RoadProperties.cpp  StreetProperties.cpp
src/map_renderer/: MapRenderer.cpp
src/utils/: MyRandom.cpp  MyTimer.cpp  Vector2dUtils.cpp
